tokenizer.cc

#line 1 "tokenizer.rl"
/* -*- Mode: C++; indent-tabs-mode: nil -*- */


#line 21 "tokenizer.rl"


#include <boost/iostreams/device/mapped_file.hpp>
#include <boost/scoped_array.hpp>

#include "tokens.h"
#include "stream.h"
#include "tokenizer.h"
#include "state.h"

using namespace std;
using namespace boost;

namespace schwa { namespace tokens {


#line 24 "tokenizer.cc"
static const int tokenizer_start = 624;
static const int tokenizer_error = 0;

static const int tokenizer_en_main = 624;


#line 37 "tokenizer.rl"

void
Tokenizer::token_(Type type, Stream &dest, State &state, const char *norm) const {
  state.ensure_sentence(dest);
  state.add(type, dest, norm);
}

void
Tokenizer::word_(Type type, Stream &dest, State &state, const char *norm) const {
  if(state.seen_terminator){
    // need to make this work better for UTF8
    if(type == WORD && (isupper(*state.ts) || isdigit(*state.ts)))
      state.flush_sentence(dest);
    else
      state.seen_terminator = false;
  }
  token_(type, dest, state, norm);
}

void
Tokenizer::punct_(Type type, Stream &dest, State &state, const char *norm) const {
  state.flush_sentence(dest);
  token_(type, dest, state, norm);
}

void
Tokenizer::end_punct_(Type type, Stream &dest, State &state, const char *norm) const {
  token_(type, dest, state, norm);
}

void
Tokenizer::split_(Type type1, Type type2, Stream &dest, State &state,
                  const char *norm1, const char *norm2) const {
  state.flush_sentence(dest);
  state.ensure_sentence(dest);
  state.split(type1, type2, dest, norm1, norm2);
}

void
Tokenizer::terminator_(Stream &dest, State &state, const char *norm) const {
  state.seen_terminator = true;
  end_punct_(TERMINATOR, dest, state, norm);
}

void
Tokenizer::single_quote_(Stream &dest, State &state) const {
  if(state.in_single_quotes){
    end_punct_(QUOTE, dest, state, "'");
    state.in_single_quotes = false;
    return;
  }

  punct_(QUOTE, dest, state, "`");
  state.in_single_quotes = true;
}

void
Tokenizer::double_quote_(Stream &dest, State &state) const {
  if(state.in_double_quotes){
    end_punct_(QUOTE, dest, state, "''");
    state.in_double_quotes = false;
    return;
  }

  punct_(QUOTE, dest, state, "``");
  state.in_double_quotes = true;
}

void
Tokenizer::open_single_quote_(Stream &dest, State &state) const {
  punct_(QUOTE, dest, state, "`");
  state.in_single_quotes = true;
}

void
Tokenizer::close_single_quote_(Stream &dest, State &state) const {
  end_punct_(QUOTE, dest, state, "'");
  state.in_single_quotes = false;
}

void
Tokenizer::open_double_quote_(Stream &dest, State &state) const {
  punct_(QUOTE, dest, state, "``");
  state.in_double_quotes = true;
}

void
Tokenizer::close_double_quote_(Stream &dest, State &state) const {
  end_punct_(QUOTE, dest, state, "''");
  state.in_double_quotes = false;
}

void
Tokenizer::sep_text_paragraph_(Stream &dest, State &state) const {
  state.end_paragraph(dest);
}

void
Tokenizer::sep_html_paragraph_(Stream &dest, State &state) const {
  state.end_paragraph(dest);
}

void
Tokenizer::begin_html_paragraph_(Stream &dest, State &state) const {
  state.begin_paragraph(dest);
}

void
Tokenizer::end_html_paragraph_(Stream &dest, State &state) const {
  state.end_paragraph(dest);
}

void
Tokenizer::begin_html_list_(Stream &dest, State &state) const {
  state.begin_list(dest);
}


void
Tokenizer::end_html_list_(Stream &dest, State &state) const {
  state.end_list(dest);
}

void
Tokenizer::begin_html_item_(Stream &dest, State &state) const {
  state.begin_item(dest);
}

void
Tokenizer::end_html_item_(Stream &dest, State &state) const {
  state.end_item(dest);
}

void
Tokenizer::dash_or_item_(Stream &dest, State &state) const {
  if(state.in_sentence)
    punct_(DASH, dest, state, "--");
  else
    state.begin_item(dest);
}

bool
Tokenizer::tokenize_(Stream &dest, State &s, const char *&n1, const char *&n2,
                     const char *p, const char *pe, const char *eof) const {
  
#line 177 "tokenizer.cc"
	{
	if ( p == pe )
		goto _test_eof;
	switch (  s.cs )
	{
tr2:
#line 7 "rules/main.rl"
	{ s.te = p+1;{ word_(WORD, dest, s); }}
	goto st624;
tr5:
#line 1 "NONE"
	{	switch(  s.act ) {
	case 0:
	{{goto st0;}}
	break;
	case 1:
	{{p = (( s.te))-1;} single_quote_(dest, s); }
	break;
	case 3:
	{{p = (( s.te))-1;} open_single_quote_(dest, s); }
	break;
	case 4:
	{{p = (( s.te))-1;} close_single_quote_(dest, s); }
	break;
	case 5:
	{{p = (( s.te))-1;} open_double_quote_(dest, s); }
	break;
	case 6:
	{{p = (( s.te))-1;} close_double_quote_(dest, s); }
	break;
	case 7:
	{{p = (( s.te))-1;} terminator_(dest, s, "."); }
	break;
	case 10:
	{{p = (( s.te))-1;} terminator_(dest, s, "..."); }
	break;
	case 11:
	{{p = (( s.te))-1;} dash_or_item_(dest, s); }
	break;
	case 12:
	{{p = (( s.te))-1;}}
	break;
	case 22:
	{{p = (( s.te))-1;} split_(WORD, CONTRACTION, dest, s); }
	break;
	case 23:
	{{p = (( s.te))-1;} split_(WORD, CONTRACTION, dest, s); }
	break;
	case 24:
	{{p = (( s.te))-1;} split_(WORD, CONTRACTION, dest, s); }
	break;
	case 25:
	{{p = (( s.te))-1;} split_(WORD, CONTRACTION, dest, s); }
	break;
	case 26:
	{{p = (( s.te))-1;} split_(WORD, CONTRACTION, dest, s); }
	break;
	case 27:
	{{p = (( s.te))-1;} split_(WORD, POSSESSIVE, dest, s); }
	break;
	case 28:
	{{p = (( s.te))-1;} split_(NUMBER, UNIT, dest, s); }
	break;
	case 30:
	{{p = (( s.te))-1;} word_(WORD, dest, s); }
	break;
	case 31:
	{{p = (( s.te))-1;} word_(WORD, dest, s); }
	break;
	case 33:
	{{p = (( s.te))-1;} word_(WORD, dest, s); }
	break;
	case 34:
	{{p = (( s.te))-1;} word_(WORD, dest, s); }
	break;
	case 35:
	{{p = (( s.te))-1;} punct_(PUNCTUATION, dest, s); }
	break;
	case 36:
	{{p = (( s.te))-1;} word_(WORD, dest, s); }
	break;
	case 37:
	{{p = (( s.te))-1;} word_(WORD, dest, s); }
	break;
	case 38:
	{{p = (( s.te))-1;} word_(WORD, dest, s); }
	break;
	case 39:
	{{p = (( s.te))-1;} word_(WORD, dest, s); }
	break;
	}
	}
	goto st624;
tr14:
#line 7 "rules/main.rl"
	{{p = (( s.te))-1;}{ word_(WORD, dest, s); }}
	goto st624;
tr22:
#line 6 "rules/main.rl"
	{{p = (( s.te))-1;}}
	goto st624;
tr28:
#line 7 "actions.rl"
	{ s.suffix += 2; }
#line 51 "rules/main.rl"
	{ s.te = p+1;{ split_(NUMBER, UNIT, dest, s); }}
	goto st624;
tr35:
#line 11 "actions.rl"
	{ s.suffix += 6; }
#line 51 "rules/main.rl"
	{ s.te = p+1;{ split_(NUMBER, UNIT, dest, s); }}
	goto st624;
tr40:
#line 7 "actions.rl"
	{ s.suffix += 2; }
#line 47 "rules/units.rl"
	{n2="am";}
#line 51 "rules/main.rl"
	{ s.te = p+1;{ split_(NUMBER, UNIT, dest, s); }}
	goto st624;
tr42:
#line 9 "actions.rl"
	{ s.suffix += 4; }
#line 47 "rules/units.rl"
	{n2="am";}
#line 51 "rules/main.rl"
	{ s.te = p+1;{ split_(NUMBER, UNIT, dest, s); }}
	goto st624;
tr44:
#line 51 "rules/main.rl"
	{{p = (( s.te))-1;}{ split_(NUMBER, UNIT, dest, s); }}
	goto st624;
tr46:
#line 7 "actions.rl"
	{ s.suffix += 2; }
#line 48 "rules/units.rl"
	{n2="pm";}
#line 51 "rules/main.rl"
	{ s.te = p+1;{ split_(NUMBER, UNIT, dest, s); }}
	goto st624;
tr48:
#line 9 "actions.rl"
	{ s.suffix += 4; }
#line 48 "rules/units.rl"
	{n2="pm";}
#line 51 "rules/main.rl"
	{ s.te = p+1;{ split_(NUMBER, UNIT, dest, s); }}
	goto st624;
tr51:
#line 8 "actions.rl"
	{ s.suffix += 3; }
#line 51 "rules/main.rl"
	{ s.te = p+1;{ split_(NUMBER, UNIT, dest, s); }}
	goto st624;
tr59:
#line 6 "actions.rl"
	{ s.suffix++; }
#line 51 "rules/main.rl"
	{ s.te = p+1;{ split_(NUMBER, UNIT, dest, s); }}
	goto st624;
tr66:
#line 10 "actions.rl"
	{ s.suffix += 5; }
#line 51 "rules/main.rl"
	{ s.te = p+1;{ split_(NUMBER, UNIT, dest, s); }}
	goto st624;
tr68:
#line 9 "actions.rl"
	{ s.suffix += 4; }
#line 51 "rules/main.rl"
	{ s.te = p+1;{ split_(NUMBER, UNIT, dest, s); }}
	goto st624;
tr82:
#line 7 "rules/main.rl"
	{{p = (( s.te))-1;}{ word_(WORD, dest, s); }}
	goto st624;
tr91:
#line 8 "rules/main.rl"
	{ s.te = p+1;{ punct_(PUNCTUATION, dest, s); }}
	goto st624;
tr92:
#line 25 "rules/main.rl"
	{ s.te = p+1;{ dash_or_item_(dest, s); }}
	goto st624;
tr95:
#line 14 "rules/main.rl"
	{ s.te = p+1;{ open_single_quote_(dest, s); }}
	goto st624;
tr96:
#line 17 "rules/main.rl"
	{ s.te = p+1;{ open_double_quote_(dest, s); }}
	goto st624;
tr97:
#line 18 "rules/main.rl"
	{ s.te = p+1;{ close_double_quote_(dest, s); }}
	goto st624;
tr99:
#line 14 "rules/main.rl"
	{{p = (( s.te))-1;}{ open_single_quote_(dest, s); }}
	goto st624;
tr114:
#line 15 "rules/main.rl"
	{{p = (( s.te))-1;}{ close_single_quote_(dest, s); }}
	goto st624;
tr133:
#line 8 "rules/main.rl"
	{{p = (( s.te))-1;}{ punct_(PUNCTUATION, dest, s); }}
	goto st624;
tr144:
#line 15 "rules/main.rl"
	{ s.te = p+1;{ close_single_quote_(dest, s); }}
	goto st624;
tr147:
#line 12 "rules/main.rl"
	{ s.te = p+1;{ double_quote_(dest, s); }}
	goto st624;
tr148:
#line 11 "rules/main.rl"
	{ s.te = p+1;{ single_quote_(dest, s); }}
	goto st624;
tr155:
#line 23 "rules/main.rl"
	{ s.te = p+1;{ terminator_(dest, s, "..."); }}
	goto st624;
tr171:
#line 10 "rules/contractions.rl"
	{n2="'D";}
#line 6 "actions.rl"
	{ s.suffix++; }
#line 46 "rules/main.rl"
	{ s.te = p+1;{ split_(WORD, CONTRACTION, dest, s); }}
	goto st624;
tr173:
#line 10 "rules/contractions.rl"
	{n2="'M";}
#line 6 "actions.rl"
	{ s.suffix++; }
#line 46 "rules/main.rl"
	{ s.te = p+1;{ split_(WORD, CONTRACTION, dest, s); }}
	goto st624;
tr175:
#line 6 "actions.rl"
	{ s.suffix++; }
#line 49 "rules/main.rl"
	{n2="'s";}
#line 49 "rules/main.rl"
	{ s.te = p+1;{ split_(WORD, POSSESSIVE, dest, s); }}
	goto st624;
tr177:
#line 9 "rules/contractions.rl"
	{n2="'d";}
#line 6 "actions.rl"
	{ s.suffix++; }
#line 46 "rules/main.rl"
	{ s.te = p+1;{ split_(WORD, CONTRACTION, dest, s); }}
	goto st624;
tr179:
#line 9 "rules/contractions.rl"
	{n2="'m";}
#line 6 "actions.rl"
	{ s.suffix++; }
#line 46 "rules/main.rl"
	{ s.te = p+1;{ split_(WORD, CONTRACTION, dest, s); }}
	goto st624;
tr182:
#line 13 "rules/contractions.rl"
	{n2="'LL";}
#line 7 "actions.rl"
	{ s.suffix += 2; }
#line 47 "rules/main.rl"
	{ s.te = p+1;{ split_(WORD, CONTRACTION, dest, s); }}
	goto st624;
tr183:
#line 13 "rules/contractions.rl"
	{n2="'RE";}
#line 7 "actions.rl"
	{ s.suffix += 2; }
#line 47 "rules/main.rl"
	{ s.te = p+1;{ split_(WORD, CONTRACTION, dest, s); }}
	goto st624;
tr184:
#line 13 "rules/contractions.rl"
	{n2="'VE";}
#line 7 "actions.rl"
	{ s.suffix += 2; }
#line 47 "rules/main.rl"
	{ s.te = p+1;{ split_(WORD, CONTRACTION, dest, s); }}
	goto st624;
tr185:
#line 12 "rules/contractions.rl"
	{n2="'ll";}
#line 7 "actions.rl"
	{ s.suffix += 2; }
#line 47 "rules/main.rl"
	{ s.te = p+1;{ split_(WORD, CONTRACTION, dest, s); }}
	goto st624;
tr186:
#line 12 "rules/contractions.rl"
	{n2="'re";}
#line 7 "actions.rl"
	{ s.suffix += 2; }
#line 47 "rules/main.rl"
	{ s.te = p+1;{ split_(WORD, CONTRACTION, dest, s); }}
	goto st624;
tr187:
#line 12 "rules/contractions.rl"
	{n2="'ve";}
#line 7 "actions.rl"
	{ s.suffix += 2; }
#line 47 "rules/main.rl"
	{ s.te = p+1;{ split_(WORD, CONTRACTION, dest, s); }}
	goto st624;
tr273:
#line 11 "rules/main.rl"
	{{p = (( s.te))-1;}{ single_quote_(dest, s); }}
	goto st624;
tr275:
#line 7 "rules/main.rl"
	{ s.te = p+1;{ word_(WORD, dest, s); }}
	goto st624;
tr323:
#line 7 "rules/main.rl"
	{{p = (( s.te))-1;}{ word_(WORD, dest, s); }}
	goto st624;
tr379:
#line 25 "rules/main.rl"
	{{p = (( s.te))-1;}{ dash_or_item_(dest, s); }}
	goto st624;
tr427:
#line 20 "rules/main.rl"
	{{p = (( s.te))-1;}{ terminator_(dest, s, "."); }}
	goto st624;
tr472:
#line 6 "rules/main.rl"
	{ s.te = p+1;}
	goto st624;
tr478:
#line 6 "rules/main.rl"
	{{p = (( s.te))-1;}}
	goto st624;
tr486:
#line 38 "rules/main.rl"
	{ s.te = p+1;{ end_html_item_(dest, s); }}
	goto st624;
tr488:
#line 35 "rules/main.rl"
	{ s.te = p+1;{ end_html_list_(dest, s); }}
	goto st624;
tr489:
#line 31 "rules/main.rl"
	{ s.te = p+1;{ end_html_paragraph_(dest, s); }}
	goto st624;
tr519:
#line 37 "rules/main.rl"
	{ s.te = p+1;{ begin_html_item_(dest, s); }}
	goto st624;
tr521:
#line 34 "rules/main.rl"
	{ s.te = p+1;{ begin_html_list_(dest, s); }}
	goto st624;
tr525:
#line 30 "rules/main.rl"
	{ s.te = p+1;{ begin_html_paragraph_(dest, s); }}
	goto st624;
tr530:
#line 7 "rules/main.rl"
	{{p = (( s.te))-1;}{ word_(WORD, dest, s); }}
	goto st624;
tr596:
#line 22 "rules/contractions.rl"
	{n2="N'T";}
#line 7 "actions.rl"
	{ s.suffix += 2; }
#line 42 "rules/main.rl"
	{ s.te = p+1;{ split_(WORD, CONTRACTION, dest, s); }}
	goto st624;
tr623:
#line 7 "rules/main.rl"
	{ s.te = p+1;{ word_(WORD, dest, s); }}
	goto st624;
tr628:
#line 21 "rules/contractions.rl"
	{n2="n't";}
#line 7 "actions.rl"
	{ s.suffix += 2; }
#line 42 "rules/main.rl"
	{ s.te = p+1;{ split_(WORD, CONTRACTION, dest, s); }}
	goto st624;
tr666:
#line 7 "rules/main.rl"
	{ s.te = p+1;{ word_(WORD, dest, s); }}
	goto st624;
tr698:
#line 22 "rules/main.rl"
	{ s.te = p+1;{ terminator_(dest, s, "!"); }}
	goto st624;
tr712:
#line 21 "rules/main.rl"
	{ s.te = p+1;{ terminator_(dest, s, "?"); }}
	goto st624;
tr763:
#line 7 "rules/main.rl"
	{ s.te = p;p--;{ word_(WORD, dest, s); }}
	goto st624;
tr766:
#line 6 "rules/main.rl"
	{ s.te = p;p--;}
	goto st624;
tr771:
#line 7 "rules/main.rl"
	{ s.te = p;p--;{ word_(WORD, dest, s); }}
	goto st624;
tr797:
#line 7 "rules/main.rl"
	{ s.te = p;p--;{ word_(WORD, dest, s); }}
	goto st624;
tr798:
#line 51 "rules/main.rl"
	{ s.te = p;p--;{ split_(NUMBER, UNIT, dest, s); }}
	goto st624;
tr804:
#line 51 "rules/main.rl"
	{ s.te = p+1;{ split_(NUMBER, UNIT, dest, s); }}
	goto st624;
tr896:
#line 14 "rules/main.rl"
	{ s.te = p;p--;{ open_single_quote_(dest, s); }}
	goto st624;
tr899:
#line 15 "rules/main.rl"
	{ s.te = p;p--;{ close_single_quote_(dest, s); }}
	goto st624;
tr903:
#line 8 "rules/main.rl"
	{ s.te = p;p--;{ punct_(PUNCTUATION, dest, s); }}
	goto st624;
tr921:
#line 11 "rules/main.rl"
	{ s.te = p;p--;{ single_quote_(dest, s); }}
	goto st624;
tr927:
#line 7 "rules/main.rl"
	{ s.te = p;p--;{ word_(WORD, dest, s); }}
	goto st624;
tr928:
#line 7 "rules/main.rl"
	{ s.te = p+1;{ word_(WORD, dest, s); }}
	goto st624;
tr979:
#line 25 "rules/main.rl"
	{ s.te = p;p--;{ dash_or_item_(dest, s); }}
	goto st624;
tr985:
#line 47 "rules/main.rl"
	{ s.te = p;p--;{ split_(WORD, CONTRACTION, dest, s); }}
	goto st624;
tr1069:
#line 20 "rules/main.rl"
	{ s.te = p;p--;{ terminator_(dest, s, "."); }}
	goto st624;
tr1120:
#line 6 "rules/main.rl"
	{ s.te = p;p--;}
	goto st624;
tr1139:
#line 7 "rules/main.rl"
	{ s.te = p;p--;{ word_(WORD, dest, s); }}
	goto st624;
tr1278:
#line 46 "rules/main.rl"
	{ s.te = p;p--;{ split_(WORD, CONTRACTION, dest, s); }}
	goto st624;
tr1662:
#line 7 "rules/main.rl"
	{ s.te = p;p--;{ word_(WORD, dest, s); }}
	goto st624;
st624:
#line 1 "NONE"
	{ s.ts = 0;}
#line 1 "NONE"
	{ s.act = 0;}
	if ( ++p == pe )
		goto _test_eof624;
case 624:
#line 1 "NONE"
	{ s.ts = p;}
#line 665 "tokenizer.cc"
	switch( (*p) ) {
		case -62: goto st1;
		case -30: goto st100;
		case 10: goto tr696;
		case 13: goto tr697;
		case 32: goto tr1;
		case 33: goto tr698;
		case 34: goto tr147;
		case 35: goto st714;
		case 36: goto tr700;
		case 38: goto tr701;
		case 39: goto tr702;
		case 42: goto tr703;
		case 43: goto tr704;
		case 45: goto tr705;
		case 46: goto tr706;
		case 50: goto tr708;
		case 60: goto tr710;
		case 61: goto tr711;
		case 63: goto tr712;
		case 65: goto tr713;
		case 66: goto tr714;
		case 67: goto tr715;
		case 68: goto tr716;
		case 69: goto tr717;
		case 70: goto tr718;
		case 71: goto tr719;
		case 72: goto tr720;
		case 73: goto tr721;
		case 74: goto tr722;
		case 75: goto tr723;
		case 76: goto tr724;
		case 77: goto tr725;
		case 78: goto tr726;
		case 79: goto tr727;
		case 80: goto tr728;
		case 81: goto tr729;
		case 82: goto tr730;
		case 83: goto tr731;
		case 84: goto tr732;
		case 85: goto tr733;
		case 86: goto tr734;
		case 87: goto tr735;
		case 88: goto tr736;
		case 89: goto tr737;
		case 90: goto tr736;
		case 95: goto tr738;
		case 96: goto st1358;
		case 97: goto tr740;
		case 99: goto tr742;
		case 100: goto tr743;
		case 101: goto tr744;
		case 102: goto tr745;
		case 103: goto tr746;
		case 104: goto tr747;
		case 105: goto tr748;
		case 108: goto tr749;
		case 109: goto tr750;
		case 110: goto tr751;
		case 111: goto tr752;
		case 112: goto tr753;
		case 113: goto tr754;
		case 114: goto tr755;
		case 115: goto tr756;
		case 116: goto tr757;
		case 117: goto tr758;
		case 118: goto tr759;
		case 119: goto tr760;
		case 121: goto tr761;
	}
	if ( (*p) < 37 ) {
		if ( (*p) < -32 ) {
			if ( -61 <= (*p) && (*p) <= -33 )
				goto st3;
		} else if ( (*p) > -17 ) {
			if ( (*p) > -12 ) {
				if ( 9 <= (*p) && (*p) <= 12 )
					goto tr1;
			} else if ( (*p) >= -16 )
				goto st9;
		} else
			goto st4;
	} else if ( (*p) > 47 ) {
		if ( (*p) < 58 ) {
			if ( (*p) > 49 ) {
				if ( 51 <= (*p) && (*p) <= 57 )
					goto tr709;
			} else if ( (*p) >= 48 )
				goto tr707;
		} else if ( (*p) > 94 ) {
			if ( (*p) > 122 ) {
				if ( 123 <= (*p) && (*p) <= 126 )
					goto tr91;
			} else if ( (*p) >= 98 )
				goto tr741;
		} else
			goto tr91;
	} else
		goto tr91;
	goto st0;
st0:
 s.cs = 0;
	goto _out;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
	switch( (*p) ) {
		case -96: goto tr1;
		case -92: goto tr0;
		case -79: goto tr3;
	}
	if ( (*p) < -94 ) {
		if ( (*p) <= -95 )
			goto tr0;
	} else if ( (*p) > -91 ) {
		if ( -90 <= (*p) && (*p) <= -65 )
			goto tr0;
	} else
		goto tr2;
	goto st0;
tr0:
#line 1 "NONE"
	{ s.te = p+1;}
#line 7 "rules/main.rl"
	{ s.act = 39;}
	goto st625;
tr129:
#line 1 "NONE"
	{ s.te = p+1;}
#line 14 "rules/main.rl"
	{ s.act = 3;}
	goto st625;
tr130:
#line 1 "NONE"
	{ s.te = p+1;}
#line 15 "rules/main.rl"
	{ s.act = 4;}
	goto st625;
tr98:
#line 1 "NONE"
	{ s.te = p+1;}
#line 23 "rules/main.rl"
	{ s.act = 10;}
	goto st625;
tr131:
#line 1 "NONE"
	{ s.te = p+1;}
#line 17 "rules/main.rl"
	{ s.act = 5;}
	goto st625;
tr132:
#line 1 "NONE"
	{ s.te = p+1;}
#line 18 "rules/main.rl"
	{ s.act = 6;}
	goto st625;
tr861:
#line 1 "NONE"
	{ s.te = p+1;}
#line 6 "actions.rl"
	{ s.suffix++; }
#line 51 "rules/main.rl"
	{ s.act = 28;}
	goto st625;
st625:
	if ( ++p == pe )
		goto _test_eof625;
case 625:
#line 835 "tokenizer.cc"
	switch( (*p) ) {
		case -62: goto st2;
		case -30: goto st5;
		case 38: goto st10;
		case 45: goto tr762;
	}
	if ( (*p) < -16 ) {
		if ( (*p) > -33 ) {
			if ( -32 <= (*p) && (*p) <= -17 )
				goto st4;
		} else if ( (*p) >= -61 )
			goto st3;
	} else if ( (*p) > -12 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
